--- a/hw5_20161006Thu2043/README
+++ b/hw5_20161006Thu2043/README
@@ -3,7 +3,7 @@
 ## Instructor: Willem Schreuder
 ## Student: Bo Cao
 ## Email: boca7588@colorado.edu or bo.cao-1@colorado.edu
-## Hours spent to complete: 13 hours
+## Hours spent to complete: 16 hours
 
 Write an OpenGL program that incorporates lighting to create a a scene
 consisting of solid objects that can be viewed in three dimensions under user
@@ -55,7 +55,7 @@ Open Terminal or Terminator on Ubuntu, after "make" process, cd to the the 'hw5'
  *  n/N        Decrease/increase shininess
  *  F1         Toggle smooth/flat shading
  *  F2         Toggle local viewer mode
- *  ,/.        Decrease/Increase light distance
+ *  F3         Toggle light distance (1/5)
  *  F8         Change ball increment
  *  F9         Invert bottom normal
  *  i/I        Toggles light movement
